--- a/src/app/events/event-details/create-session.component.html
+++ b/src/app/events/event-details/create-session.component.html
@@ -42,10 +42,11 @@
             <label for="abstract">Abstract:</label>
             <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.required">Required</em>
             <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.maxLength">Cannot exceed 400 characters</em>
+            <em *ngIf="abstract.invalid && abstract.dirty && abstract?.errors.restrictedWords">Restricted words found: {{abstract.errors.restrictedWords}}</em>
 
             <textarea formControlName="abstract" id="abstract" rows=3 class="form-control" placeholder="abstract..."></textarea>
         </div>
         <button type="submit" [disabled]="newSessionForm.invalid" class="btn btn-primary">Save</button>
         <button type="button" class="btn btn-default">Cancel</button>
-    </form>
-</div>
+    </form> 
+</div>  
