66-Passing Data into a Child Component

--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -20,4 +20,7 @@
             </address>
         </div>
     </div>
+    <hr>
+
+    <session-list [sessions]="event?.sessions" ></session-list>
 </div>
