--- a/src/app/events/event-details/event-details.component.html
+++ b/src/app/events/event-details/event-details.component.html
@@ -37,6 +37,6 @@
         </div>
     </div>
 
-    <session-list *ngIf="!addMode" [sessions]="event?.sessions" ></session-list>
+    <session-list *ngIf="!addMode" [filterBy]="filterBy" [sessions]="event?.sessions" ></session-list>
     <create-session *ngIf="addMode" (saveNewSession)="saveNewSession($event)" (cancelAddSession)="cancelAddSession()"></create-session>
 </div>
