92-Creating a Modal Component

--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -39,3 +39,9 @@
     </div>
   </div>
 </div>
+
+<simple-modal title="Matching sessions">
+  <div class="list-group">
+    <a class="list-group-item" *ngFo="let session of foundSessions" [routerLink]="['/events', session.eventId]">{{session.name}}</a>
+  </div>
+</simple-modal>
