--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -34,7 +34,7 @@
         <div class="form-group">
           <input [(ngModel)]="searchTerm" name="searchTerm" type="text" class="form-control" placeholder="Search Sessions" >
         </div>
-        <button class="btn btn-default" >Search</button>
+        <button class="btn btn-default" modal-trigger>Search</button>
       </form>
     </div>
   </div>
@@ -42,6 +42,6 @@
 
 <simple-modal title="Matching sessions">
   <div class="list-group">
-    <a class="list-group-item" *ngFo="let session of foundSessions" [routerLink]="['/events', session.eventId]">{{session.name}}</a>
+    <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">{{session.name}}</a>
   </div>
 </simple-modal>
