--- a/src/app/nav/navbar.component.html
+++ b/src/app/nav/navbar.component.html
@@ -34,13 +34,13 @@
         <div class="form-group">
           <input [(ngModel)]="searchTerm" name="searchTerm" type="text" class="form-control" placeholder="Search Sessions" >
         </div>
-        <button class="btn btn-default" modal-trigger>Search</button>
+        <button class="btn btn-default" modal-trigger="searchResults">Search</button>
       </form>
     </div>
   </div>
 </div>
 
-<simple-modal title="Matching sessions">
+<simple-modal elementId="searchResults" title="Matching sessions">
   <div class="list-group">
     <a class="list-group-item" *ngFor="let session of foundSessions" [routerLink]="['/events', session.eventId]">{{session.name}}</a>
   </div>
