102-Adding Voting Functionality

--- a/src/app/events/event-details/upvote.component.css
+++ b/src/app/events/event-details/upvote.component.css
@@ -21,11 +21,12 @@
 .badge-inverse {
   background-color: #fff;
   color: #4e5d6c;
+  margin-right: 
 }
 
 .votingCount {
-  margin-left: -11px;
-  margin-top: 1px;
+  margin-left: 10px;
+  margin-top: -104px;
   font-weight: bold;
   font-size: 14px;
 }
