--- a/src/app/events/create-event.component.html
+++ b/src/app/events/create-event.component.html
@@ -27,9 +27,10 @@
             />
         </div>
 
-        <div ngModelGroup="location" validateLocation>
+        <div ngModelGroup="location" #locationGroup="ngModelGroup" validateLocation>
             <div class="form-group">
                 <label for="address">Event Location:</label>
+                <em *ngIf="locationGroup?.invalid && locationGroup?.touched">You enter either the full location OR an online URL</em>
                 <input (ngModel)="address" name="address" id="address" type="text" class="form-control" placeholder="Address of event..."
                 />
             </div>
@@ -45,7 +46,7 @@
 
         <div class="form-group">
             <label for="onlineUrl">Online Url:</label>
-            <input (ngModel)="onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..."
+            <input (change)="locationGroup.control.controls.address.updateValueAndValidity()" (ngModel)="onlineUrl" name="onlineUrl" id="onlineUrl" type="text" class="form-control" placeholder="Online Url..."
             />
         </div>
         <div class="form-group" [ngClass]="{'error': newEventForm.controls.imageUrl?.invalid && newEventForm.controls.imageUrl?.touched}">
