--- a/src/app/events/user/profile.component.html
+++ b/src/app/events/user/profile.component.html
@@ -19,6 +19,7 @@
       </div>
       <button type="submit" class="btn btn-primary">Save</button>
       <button type="button" class="btn btn-default" (click)="cancel()">Cancel</button>
+      <button type="button" class="btn btn-warning" (click)="logout()">Logout</button>
     </form>
   </div>
 </div>
